# Almond

./: Almond.cpp  Almond.desktop  Almond.h  Almond.pro  Almond.qrc  Almond.ui  AlmondMenuWidget.cpp  AlmondMenuWidget.h  BackgroundTask.cpp  BackgroundTask.h  Bitmap.cpp  Bitmap.h  CMakeLists.txt  Color.cpp  Color.h  CubicSpline.h  Dockerfile  EscapeTimeVisualWidget.cpp  EscapeTimeVisualWidget.h  ExportImageMenu.cpp  ExportImageMenu.h  ExportImageMenu.ui  ExportVideoMenu.cpp  ExportVideoMenu.h  ExportVideoMenu.ui  Fixed.h  FractalWidget.cpp  FractalWidget.h  FractalWidgetUtils.cpp  FractalWidgetUtils.h  FractalZoomWidget.cpp  FractalZoomWidget.h  Generators.cpp  Generators.h  GenericMandelbrot.h  Gradient.cpp  Gradient.h  GradientMenu.cpp  GradientMenu.h  GradientMenu.ui  (+33 more)
CMakeModules/: FindFFmpeg.cmake  Windeployqt.cmake
debian/: Almond.appdata.xml  copyright
gradients/: clouds.xml  default.xml  grayscale.xml  peach.xml  rainbow.xml
include/: About.h  Almond.h  EscapeTimeVisualWidget.h  ExportVideoMenu.h  FractalWidget.h  FractalWidgetUtils.h  FractalZoomWidget.h  GradientMenu.h  GradientWidget.h  GridFlowLayout.h  MandelWidget.h  customgenerator.h
installer/: config.xml
libalmond/: CMakeLists.txt
libalmond/include/: Bitmap.h  Color.h  CubicSpline.h  ExportRecipe.h  Gradient.h  ImageExport.h  MandelVideoGenerator.h  Serialize.h  VideoRecipe.h  VideoStream.h  XmlException.h
libalmond/lpng1637/: CMakeLists.txt
libalmond/src/: Color.cpp  CubicSpline.cpp  ExportRecipe.cpp  Gradient.cpp  ImageExport.cpp  MandelVideoGenerator.cpp  Serialize.cpp  VideoStream.cpp  XmlException.cpp  main.cpp.txt
libalmond/tinyxml2/: tinyxml2.cpp
libalmond/zlib-1.2.11/: CMakeLists.txt
libmandel/: CMakeLists.txt
libmandel/asmjit/: CMakeLists.txt
libmandel/include/: Arena.h  Benchmark.h  ClGenerators.h  CpuGenerators.h  CpuGeneratorsAVX.h  ExecData.h  Fixed.h  FloatLog.h  Generators.h  Hardware.h  HexDouble.h  IterationCompiler.h  IterationFormula.h  IterationGenerator.h  IterationIR.h  JuliaGenerators.h  LightDoubleDouble.h  Mandel.h  MandelUtil.h  MpfrWrapper.h  NaiveIRGenerator.h  OctaDouble.h  OpenClCode.h  OpenClInternal.h  PolyfloatUtil.h  QuadDouble.h  Real.h  TripleDouble.h  TripleFloat.h  Types.h
libmandel/qd-2.3.22/: config.h
libmandel/resourcec/: resourcec.cpp
libmandel/src/: Benchmark.cpp  ClGenerators.cpp  CpuGenerators.cpp  CpuGeneratorsAVX.cpp  CpuGeneratorsAVX512.cpp  CpuGeneratorsAVXFMA.cpp  CpuGeneratorsNeon.cpp  CpuGeneratorsSSE2.cpp  FloatLog.cpp  Generators.cpp  Hardware.cpp  IterationCompiler.cpp  IterationCompilerCl.cpp  IterationFormula.cpp  IterationGenerator.cpp  IterationIR.cpp  JuliaGenerators.cpp  Mandel.cpp  MandelUtil.cpp  NaiveIRGenerator.cpp  OpenClCode.cpp  Real.cpp  Types.cpp  doubledouble.cl  doubledouble.h  doublefloat.cl  doublefloat.h  mandel.cpp  quaddouble.cl
libmandel/src/opencl/: double.cl  double.h  doubledouble.cl  doubledouble.h  doublefloat.cl  doublefloat.h  fixed128.cl  fixed128.h  fixed512.cl  fixed512.h  fixed64.cl  fixed64.h  float.cl  float.h  hexdouble.cl  hexdouble.h  makefile  octadouble.cl  octadouble.h  quaddouble.cl  quaddouble.h  tripledouble.cl  tripledouble.h  triplefloat.cl  triplefloat.h
libmandel/src/opencl_template/: doubledouble.cl  doubledouble.h  doubledouble_prelude.cl  doubledouble_prelude.h  makefile  quaddouble_prelude.cl
libmandel/tests/: accurate.cpp
mandelbench/: CMakeLists.txt  mandelbench.cpp
mandelvid/: CMakeLists.txt
mandelvid/include/: Bitmap.h  MandelVideoGenerator.h  Util.h  run.h
mandelvid/src/: MandelVideoGenerator.cpp  Util.cpp  main.cpp  run.cpp
resources/: Almond.qrc  about_en.html  splash.qrc
resources/gradients/: almond.xml  blue_gold.xml  element.xml  grayscale.xml  ikea.xml
src/: About.cpp  Almond.cpp  AlmondMenuWidget.cpp  EscapeTimeVisualWidget.cpp  ExportImageMenu.cpp  ExportVideoMenu.cpp  FractalWidget.cpp  FractalWidgetUtils.cpp  FractalZoomWidget.cpp  GradientMenu.cpp  GradientWidget.cpp  GridFlowLayout.cpp  MandelWidget.cpp  choosegenerators.cpp  main.cpp
translations/: almond.de.ts  almond_de-DE.ts
ui/: About.ui  Almond.ui  ExportImageMenu.ui  ExportVideoMenu.ui  GradientMenu.ui  choosegenerators.ui  exportimagedialog.ui  gradientchooser.ui
